--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3",
+    "react-virtualized": "^9.22.5",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.9",
-    "@types/react-redux": "^7.1.24"
+    "@types/react-redux": "^7.1.24",
+    "@types/react-virtualized": "^9.21.22"
   }
 }
