--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,16 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.development
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#playwrite
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+playwright/.auth
